[package]
name = "stream-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.5"
actix-web = "4"
base64 = "0.22.1"
bytes = "1.6.0"
dotenv_codegen = "0.15.0"
futures = "0.3.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.37.0"
tokio-stream = "0.1.15"
